2007-04-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/files/__init__.py:
	* gaupol/files/microdvd.py:
	* gaupol/files/mpl2.py:
	* gaupol/files/mpsub.py:
	* gaupol/files/ssa.py:
	* gaupol/files/_subfile.py:
	* gaupol/files/subrip.py:
	* gaupol/files/subviewer2.py:
	* gaupol/files/tmplayer.py:
	* gaupol/finder.py:
	Add contracts.
	Use contextlib.closing with codecs.open.

	* gaupol/util.py:
	Use contextlib.closing with codecs.open.

2007-04-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/unittest/case.py (raises):
	New function.

2007-04-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/calculator.py:
	* gaupol/finder.py:
	* gaupol/liner.py:
	* gaupol/parser.py:
	Add contracts.

	* gaupol/util.py (last):
	New function.

2007-04-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/enclib.py:
	* gaupol/langlib.py:
	* gaupol/scriptlib.py:
	Add contracts.

2007-04-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/i18n.py:
	* gaupol/i18n.py:
	New modules.

2007-04-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/const.py:
	* gaupol/util.py:
	Minor changes.

2007-04-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/util.py (is_method):
	New function. Use with contractual and memoize.

2007-04-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/base/observable.py:
	Add contracts.

2007-04-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/base/_mutables.py:
	Add contracts.

	* gaupol/util.py (contractual):
	Handle name mangling of __private methods.

2007-04-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/cons.py:
	* gaupol/const.py:
	* gaupol/gtk/cons.py:
	* gaupol/gtk/const.py:
	Rename to const.

2007-04-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/base/cons.py:
	* gaupol/base/const.py:
	Rename to const.

2007-04-04  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/base/observable.py:
	* gaupol/util.py:
	Move notify_frozen to util.

2007-04-04  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/main.py:
	Set util.CHECK_CONTRACTS based on --debug.
